# TER2022

./: CMakeLists.txt  README.md
include/: Instance.hpp  Solution.hpp  graph.hpp  metaHeuristics.hpp  modelSolving.hpp  parser.hpp
instances/: test.txt
instances/cleaned/: Catlanta.txt  Ccost266.txt  Cfrance.txt  Cgeant.txt  Cgermany50.txt  Cgiul39.txt  Cindia35.txt  Cjanos-us-ca.txt  Cjanos-us.txt  Cnewyork.txt  Cnobel-eu.txt  Cnobel-us.txt  Cnorway.txt  Cpioro40.txt  Cpolska.txt  Csun.txt
src/: Instance.cpp  SP.cpp  SPMD.cpp  Solution.cpp  main.cpp  metaHeuristics.cpp  modelSolving.cpp  parser.cpp
